--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,11 @@
     "            )\n",
     "            flow_file.write(\"import time\")\n",
     "            write_observers(\n",
-    "                lib_name, flow_file, module_name, os.environ['SCIFLOW_BUCKET'], Config().lib_name\n",
+    "                lib_name,\n",
+    "                flow_file,\n",
+    "                module_name,\n",
+    "                os.environ[\"SCIFLOW_BUCKET\"],\n",
+    "                Config().lib_name,\n",
     "            )\n",
     "\n",
     "        flow_file.write(f\"\\n\\nclass {flow_class_name}(FlowSpec):\\n\")\n",
@@ -344,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +909,9 @@
       "2021-04-25 19:52:30.019 Terminating 0 active tasks...\n",
       "2021-04-25 19:52:30.019 Flushing logs...\n",
       "    Step failure:\n",
-      "    Step preprocess (task-id 2) failed.\n"
+      "    Step preprocess (task-id 2) failed.\n",
+      "Flow: test_data_handling.py --no-pylint run verified\n",
+      "Flow: test_export.py --no-pylint run verified\n"
      ]
     }
    ],
@@ -940,7 +946,68 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running flow: test_clustering.py\n",
+      "Metaflow 2.0.5 executing TestClusteringFlow for user:e02079\n",
+      "Validating your flow...\n",
+      "    The graph looks good!\n",
+      "2021-04-25 19:55:19.694 Workflow starting (run-id 1619380519690776):\n",
+      "2021-04-25 19:55:19.697 [1619380519690776/start/1 (pid 4790)] Task is starting.\n",
+      "2021-04-25 19:55:21.063 [1619380519690776/start/1 (pid 4790)] Task finished successfully.\n",
+      "2021-04-25 19:55:21.068 [1619380519690776/preprocess/2 (pid 4818)] Task is starting.\n",
+      "2021-04-25 19:55:22.316 [1619380519690776/preprocess/2 (pid 4818)] <flow TestClusteringFlow step preprocess> failed:\n",
+      "2021-04-25 19:55:22.316 [1619380519690776/preprocess/2 (pid 4818)] Internal error\n",
+      "2021-04-25 19:55:22.316 [1619380519690776/preprocess/2 (pid 4818)] Traceback (most recent call last):\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/cli.py\", line 857, in main\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] start(auto_envvar_prefix='METAFLOW', obj=state)\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 829, in __call__\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] return self.main(args, kwargs)\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 782, in main\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] rv = self.invoke(ctx)\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 1259, in invoke\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 1066, in invoke\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] return ctx.invoke(self.callback, ctx.params)\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/core.py\", line 610, in invoke\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] return callback(args, kwargs)\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/click/decorators.py\", line 33, in new_func\n",
+      "2021-04-25 19:55:22.317 [1619380519690776/preprocess/2 (pid 4818)] return f(get_current_context().obj, args, kwargs)\n",
+      "2021-04-25 19:55:22.429 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/cli.py\", line 432, in step\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] max_user_code_retries)\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/task.py\", line 393, in run_step\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] self._exec_step_function(step_func)\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/task.py\", line 47, in _exec_step_function\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] step_function()\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] File \"/home/jovyan/git/sciflow/nbs/test/flows/test_clustering.py\", line 40, in preprocess\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] results = preprocess(self.conn, self.model_level, self.min_date, self.traffic_percent)\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/metaflow/flowspec.py\", line 128, in __getattr__\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] (self.name, name))\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] AttributeError: Flow TestClusteringFlow has no attribute 'conn'\n",
+      "2021-04-25 19:55:22.430 [1619380519690776/preprocess/2 (pid 4818)] \n",
+      "2021-04-25 19:55:22.431 [1619380519690776/preprocess/2 (pid 4818)] Task failed.\n",
+      "2021-04-25 19:55:22.431 Workflow failed.\n",
+      "2021-04-25 19:55:22.431 Terminating 0 active tasks...\n",
+      "2021-04-25 19:55:22.431 Flushing logs...\n",
+      "    Step failure:\n",
+      "    Step preprocess (task-id 2) failed.\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-5ed1e58c6cda>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m )\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mret_code\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# slow\n",
     "\n",
@@ -1016,18 +1083,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Task pending coro=<run_flow_task() running at <ipython-input-246-7d4a0800ffe3>:4>>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# slow\n",
     "\n",
@@ -1294,18 +1350,6 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   }
  },
  "nbformat": 4,
