--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,26 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "import os\n",
-    "import subprocess\n",
     "from pathlib import Path\n",
     "\n",
-    "from turbodbc import connect, make_options, Megabytes\n",
     "import nbdev\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.clean import nbdev_clean_nbs\n",
-    "from nbqa.find_root import find_project_root"
+    "from nbqa.find_root import find_project_root\n",
+    "from turbodbc import Megabytes, connect, make_options"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,92 +118,94 @@
     "\n",
     "def prepare_env(env_file_path: str = None):\n",
     "    if env_file_path is None:\n",
-    "        env_file_path = os.path.expanduser('~/.sciflow/env')\n",
+    "        env_file_path = os.path.expanduser(\"~/.sciflow/env\")\n",
     "    # TODO create this for user\n",
     "    if not os.path.exists(env_file_path):\n",
-    "        raise EnvironmentError(f'You need to create a Sciflow environment vars file at: {env_file_path}')\n",
-    "    with(open(env_file_path, 'r')) as env_file:\n",
+    "        raise EnvironmentError(\n",
+    "            f\"You need to create a Sciflow environment vars file at: {env_file_path}\"\n",
+    "        )\n",
+    "    with (open(env_file_path, \"r\")) as env_file:\n",
     "        for line in env_file.readlines():\n",
-    "            key, value = line.strip().split('=', 1)\n",
-    "            os.environ[key.replace('export ', '')] = value"
+    "            key, value = line.strip().split(\"=\", 1)\n",
+    "            os.environ[key.replace(\"export \", \"\")] = value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def odbc_connect(options = None, env_file_path: str = None):\n",
-    "    required_vars = ('ODBC_DRIVER', 'ODBC_HOST', 'ODBC_PORT', 'ODBC_USER', 'ODBC_PWD')\n",
+    "def odbc_connect(options=None, env_file_path: str = None):\n",
+    "    required_vars = (\"ODBC_DRIVER\", \"ODBC_HOST\", \"ODBC_PORT\", \"ODBC_USER\", \"ODBC_PWD\")\n",
     "    if not all([v in os.environ for v in required_vars]):\n",
     "        prepare_env(env_file_path)\n",
     "    if options is None:\n",
     "        options = make_options(\n",
-    "            fetch_wchar_as_char=True,\n",
-    "            autocommit=True,\n",
-    "            read_buffer_size=Megabytes(5),\n",
+    "            fetch_wchar_as_char=True, autocommit=True, read_buffer_size=Megabytes(5),\n",
     "        )\n",
-    "    connection = connect(driver=os.environ['ODBC_DRIVER'],\n",
-    "                         host=os.environ['ODBC_HOST'],\n",
-    "                         port=os.environ['ODBC_PORT'],\n",
-    "                         uid=os.environ['ODBC_USER'],\n",
-    "                         pwd=os.environ['ODBC_PWD'],\n",
-    "                         SSL=1,\n",
-    "                         TrustedCerts=os.environ['SSL_CERTS'],\n",
-    "                         turbodbc_options=options,\n",
-    "                )\n",
+    "    connection = connect(\n",
+    "        driver=os.environ[\"ODBC_DRIVER\"],\n",
+    "        host=os.environ[\"ODBC_HOST\"],\n",
+    "        port=os.environ[\"ODBC_PORT\"],\n",
+    "        uid=os.environ[\"ODBC_USER\"],\n",
+    "        pwd=os.environ[\"ODBC_PWD\"],\n",
+    "        SSL=1,\n",
+    "        TrustedCerts=os.environ[\"SSL_CERTS\"],\n",
+    "        turbodbc_options=options,\n",
+    "    )\n",
     "    return connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def query(conn, sql, strings_as_dictionary=False, adaptive_integers=False, \n",
-    "               strings_to_categorical=False, date_as_object=False):\n",
+    "def query(\n",
+    "    conn,\n",
+    "    sql,\n",
+    "    strings_as_dictionary=False,\n",
+    "    adaptive_integers=False,\n",
+    "    strings_to_categorical=False,\n",
+    "    date_as_object=False,\n",
+    "):\n",
     "    with conn.cursor() as cursor:\n",
-    "        df = (cursor.execute(sql)\n",
-    "                            .fetchallarrow(\n",
-    "                                strings_as_dictionary=False,\n",
-    "                                adaptive_integers=False,\n",
-    "                            )\n",
-    "                            .to_pandas(\n",
-    "                                strings_to_categorical=False,\n",
-    "                                date_as_object=False,\n",
-    "                            )\n",
-    "                        )\n",
+    "        df = (\n",
+    "            cursor.execute(sql)\n",
+    "            .fetchallarrow(strings_as_dictionary=False, adaptive_integers=False,)\n",
+    "            .to_pandas(strings_to_categorical=False, date_as_object=False,)\n",
+    "        )\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    del os.environ['ODBC_DRIVER']\n",
-    "    del os.environ['ODBC_HOST']\n",
-    "    del os.environ['ODBC_PORT']\n",
-    "    del os.environ['ODBC_USER']\n",
-    "    del os.environ['ODBC_PWD']\n",
-    "    del os.environ['SSL_CERTS']\n",
+    "    del os.environ[\"ODBC_DRIVER\"]\n",
+    "    del os.environ[\"ODBC_HOST\"]\n",
+    "    del os.environ[\"ODBC_PORT\"]\n",
+    "    del os.environ[\"ODBC_USER\"]\n",
+    "    del os.environ[\"ODBC_PWD\"]\n",
+    "    del os.environ[\"SSL_CERTS\"]\n",
     "except KeyError:\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,12 +220,13 @@
    "source": [
     "%%time\n",
     "import turbodbc\n",
+    "\n",
     "conn = odbc_connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,8 +240,8 @@
    ],
    "source": [
     "%%time\n",
-    "assert(type(conn) == turbodbc.connection.Connection)\n",
-    "assert(query(conn, \"SELECT 1 AS test_col\")['test_col'].iloc[0] == 1)"
+    "assert type(conn) == turbodbc.connection.Connection\n",
+    "assert query(conn, \"SELECT 1 AS test_col\")[\"test_col\"].iloc[0] == 1"
    ]
   }
  ],
@@ -248,18 +250,6 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   }
  },
  "nbformat": 4,
