--- a/nbs/test/test_clustering.ipynb
+++ b/nbs/test/test_clustering.ipynb
@@ -97,7 +97,7 @@
     "traffic_percent = 1\n",
     "speed = \"fast-learn\"\n",
     "workers = 8\n",
-    "connection = odbc_connect()\n",
+    "odbc_conn = odbc_connect()\n",
     "model_level = \"TopLevelDispatcher\"\n",
     "min_date = \"2021-01-01\""
    ]
@@ -165,10 +165,10 @@
     "# export\n",
     "\n",
     "\n",
-    "def get_utterances(conn, model, min_date, traffic_percent):\n",
+    "def get_utterances(odbc_conn, model, min_date, traffic_percent):\n",
     "    segment = get_experiment_segment(traffic_percent)\n",
     "    return query(\n",
-    "        conn,\n",
+    "        odbc_conn,\n",
     "        f\"\"\"\n",
     "    select Utterance from \"chatbot_unpublish_s3\".\"lambda-output\".\"finn_feedback\"\n",
     "    where model = '{model}' and to_date(substr(\"Timestamp\", 0, 10), 'YYYY-MM-dd') >= to_date('{min_date}', 'YYYY-MM-dd')\n",
@@ -186,7 +186,7 @@
     "# export\n",
     "\n",
     "\n",
-    "def get_button_responses_filter(conn):\n",
+    "def get_button_responses_filter(odbc_conn):\n",
     "    button_responses_query = f\"\"\"\n",
     "    SELECT \"text\"\n",
     "    FROM \"chatbot_unpublish_s3\".\"lambda-output\".\"live_person\".messages a\n",
@@ -194,7 +194,7 @@
     "    on a.\"conversationId\" = b.\"LivePersonConversationId\"\n",
     "    where b.QuickReplyButton = true and a.eventBy = 'Consumer'\n",
     "    \"\"\"\n",
-    "    button_responses = query(conn, button_responses_query)\n",
+    "    button_responses = query(odbc_conn, button_responses_query)\n",
     "    additional_button_responses = [\n",
     "        \"Transaction enquiry\",\n",
     "        \"Transaction Enquiry\",\n",
@@ -215,9 +215,9 @@
     "# exportn_step:preprocess\n",
     "\n",
     "\n",
-    "def preprocess(conn, model_level, min_date, traffic_percent):\n",
-    "    data = get_utterances(conn, model_level, min_date, traffic_percent)\n",
-    "    button_filter = get_button_responses_filter(conn)\n",
+    "def preprocess(odbc_conn, model_level, min_date, traffic_percent):\n",
+    "    data = get_utterances(odbc_conn, model_level, min_date, traffic_percent)\n",
+    "    button_filter = get_button_responses_filter(odbc_conn)\n",
     "    user_texts = data[~data.Utterance.isin(button_filter)].copy()\n",
     "    documents = user_texts.Utterance.tolist()\n",
     "    results = {\"documents\": documents}\n",
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents = preprocess(connection, model_level, min_date, traffic_percent)[\"documents\"]"
+    "documents = preprocess(odbc_conn, model_level, min_date, traffic_percent)[\"documents\"]"
    ]
   },
   {
@@ -604,6 +604,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
