--- a/nbs/test/test_clustering_no_params.ipynb
+++ b/nbs/test/test_clustering_no_params.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +93,14 @@
     "traffic_percent = 1\n",
     "speed = \"fast-learn\"\n",
     "workers = 8\n",
-    "connection = odbc_connect()\n",
+    "odbc_conn = odbc_connect()\n",
     "model_level = \"TopLevelDispatcher\"\n",
     "min_date = \"2021-01-01\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,17 +154,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def get_utterances(conn, model, min_date, traffic_percent):\n",
+    "def get_utterances(odbc_conn, model, min_date, traffic_percent):\n",
     "    segment = get_experiment_segment(traffic_percent)\n",
     "    return query(\n",
-    "        conn,\n",
+    "        odbc_conn,\n",
     "        f\"\"\"\n",
     "    select Utterance from \"chatbot_unpublish_s3\".\"lambda-output\".\"finn_feedback\"\n",
     "    where model = '{model}' and to_date(substr(\"Timestamp\", 0, 10), 'YYYY-MM-dd') >= to_date('{min_date}', 'YYYY-MM-dd')\n",
@@ -175,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def get_button_responses_filter(conn):\n",
+    "def get_button_responses_filter(odbc_conn):\n",
     "    button_responses_query = f\"\"\"\n",
     "    SELECT \"text\"\n",
     "    FROM \"chatbot_unpublish_s3\".\"lambda-output\".\"live_person\".messages a\n",
@@ -190,7 +190,7 @@
     "    on a.\"conversationId\" = b.\"LivePersonConversationId\"\n",
     "    where b.QuickReplyButton = true and a.eventBy = 'Consumer'\n",
     "    \"\"\"\n",
-    "    button_responses = query(conn, button_responses_query)\n",
+    "    button_responses = query(odbc_conn, button_responses_query)\n",
     "    additional_button_responses = [\n",
     "        \"Transaction enquiry\",\n",
     "        \"Transaction Enquiry\",\n",
@@ -204,16 +204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# exportn_step:preprocess\n",
     "\n",
     "\n",
-    "def preprocess(conn, model_level, min_date, traffic_percent):\n",
-    "    data = get_utterances(conn, model_level, min_date, traffic_percent)\n",
-    "    button_filter = get_button_responses_filter(conn)\n",
+    "def preprocess(odbc_conn, model_level, min_date, traffic_percent):\n",
+    "    data = get_utterances(odbc_conn, model_level, min_date, traffic_percent)\n",
+    "    button_filter = get_button_responses_filter(odbc_conn)\n",
     "    user_texts = data[~data.Utterance.isin(button_filter)].copy()\n",
     "    documents = user_texts.Utterance.tolist()\n",
     "    results = {\"documents\": documents}\n",
@@ -222,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents = preprocess(connection, model_level, min_date, traffic_percent)[\"documents\"]"
+    "documents = preprocess(odbc_conn, model_level, min_date, traffic_percent)[\"documents\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "6"
       ]
      },
-     "execution_count": null,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "['cat', 'sat', 'mat', 'mouse', 'house', 'grouse']"
       ]
      },
-     "execution_count": null,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,6 +556,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
