--- a/nbs/data_handler.ipynb
+++ b/nbs/data_handler.ipynb
@@ -276,7 +276,7 @@
     }
    ],
    "source": [
-    "param_meta[\"connection\"]"
+    "param_meta[\"odbc_conn\"]"
    ]
   }
  ],
@@ -285,6 +285,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
