Added exit_on_error flag to check_flows

--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -22,10 +22,11 @@
     "import multiprocessing\n",
     "import os\n",
     "import subprocess\n",
-    "import sys\n",
     "from itertools import product\n",
     "from pathlib import Path, PosixPath\n",
     "from typing import Any, Dict, Iterable\n",
+    "import sys\n",
+    "\n",
     "\n",
     "import pandas as pd\n",
     "from fastcore.script import call_parse\n",
@@ -737,14 +738,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def check_flows(config, flow_command=\"show\", ignore_suffix=\"_no_params.py\"):\n",
+    "def check_flows(config, flow_command=\"show\", ignore_suffix=\"_no_params.py\", exit_on_error=True):\n",
     "    flow_results = {}\n",
     "    flows_dir = config.path(\"flows_path\")\n",
     "    if ignore_suffix:\n",
@@ -752,7 +753,7 @@
     "    else:\n",
     "        flow_paths = os.listdir(flows_dir)\n",
     "    ret_codes = []\n",
-    "    exit_code = 0\n",
+    "    exit_code = 0 \n",
     "    for flow_path in flow_paths:\n",
     "        flow_name = os.path.basename(flow_path)\n",
     "        if flow_path.endswith(\".py\"):\n",
@@ -767,13 +768,14 @@
     "                    f\"Flow: {flow_name} {flow_command} verification failed\\nDetails:\\n{output}\"\n",
     "                )\n",
     "            ret_codes.append(ret_code)\n",
-    "    if any([rc != 0 for rc in ret_codes]):\n",
+    "    if any([rc !=0 for rc in ret_codes]):\n",
     "        exit_code = 1\n",
     "        try:\n",
-    "            # Exit with an error code if running from a non interactive Pyhon environment.\n",
+    "            # Exit with an error code if running from a non interactive Python environment.\n",
     "            get_ipython().__class__.__name__\n",
     "        except NameError:\n",
-    "            return sys.exit(exit_code)\n",
+    "            if exit_on_error:\n",
+    "                return sys.exit(exit_code)\n",
     "    return exit_code"
    ]
   },
