--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -22,11 +22,10 @@
     "import multiprocessing\n",
     "import os\n",
     "import subprocess\n",
+    "import sys\n",
     "from itertools import product\n",
     "from pathlib import Path, PosixPath\n",
     "from typing import Any, Dict, Iterable\n",
-    "import sys\n",
-    "\n",
     "\n",
     "import pandas as pd\n",
     "from fastcore.script import call_parse\n",
@@ -745,7 +744,9 @@
     "# export\n",
     "\n",
     "\n",
-    "def check_flows(config, flow_command=\"show\", ignore_suffix=\"_no_params.py\", exit_on_error=True):\n",
+    "def check_flows(\n",
+    "    config, flow_command=\"show\", ignore_suffix=\"_no_params.py\", exit_on_error=True\n",
+    "):\n",
     "    flow_results = {}\n",
     "    flows_dir = config.path(\"flows_path\")\n",
     "    if ignore_suffix:\n",
@@ -753,7 +754,7 @@
     "    else:\n",
     "        flow_paths = os.listdir(flows_dir)\n",
     "    ret_codes = []\n",
-    "    exit_code = 0 \n",
+    "    exit_code = 0\n",
     "    for flow_path in flow_paths:\n",
     "        flow_name = os.path.basename(flow_path)\n",
     "        if flow_path.endswith(\".py\"):\n",
@@ -768,7 +769,7 @@
     "                    f\"Flow: {flow_name} {flow_command} verification failed\\nDetails:\\n{output}\"\n",
     "                )\n",
     "            ret_codes.append(ret_code)\n",
-    "    if any([rc !=0 for rc in ret_codes]):\n",
+    "    if any([rc != 0 for rc in ret_codes]):\n",
     "        exit_code = 1\n",
     "        try:\n",
     "            # Exit with an error code if running from a non interactive Python environment.\n",
